Setup start script and Heroku port

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -6,7 +6,8 @@
 	</head>
 	<body>
 		{{> header}} <!--Dynamic data from Header.hbs -->
-		<p>Text</p>
+		<p>Welcome to About Page </p>
+		<p>Sorry, But you won't find anything here</p>
 
 		{{> footer}}
 	</body>
