--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,4 +1,4 @@
 <header>
 	<h1> {{pageTitle}}</h1>
-	<p><a href="/">Home</a>  <a href="/about">About</a> <a href="/bad">Error</a></p>
+	<p><a href="/">Home</a>  <a href="/about">About</a> <a href="/bad">Error</a> <a href="/projects">Projects</a></p>
 </header>
